Change to ESModule, Update Packages, Solve Race Condition on writing reports

--- a/lib/package.json
+++ b/lib/package.json
@@ -1,8 +1,9 @@
 {
   "name": "cypress-parallel-extended",
-  "version": "1.0.9",
+  "version": "2.0.0",
   "description": "Reduce up to 40% your Cypress suite execution time parallelizing the test run on the same machine.",
   "main": "cli.js",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AzizFacilex/cypress-parallel.git"
@@ -29,7 +30,8 @@
     "fs-extra": "^10.0.0",
     "glob": "^11.0.1",
     "glob-escape": "^0.0.2",
-    "is-npm": "^5.0.0",
+    "install": "^0.13.0",
+    "is-npm": "^6.0.0",
     "lodash.camelcase": "^4.3.0",
     "mocha": "^11.1.0",
     "yargs": "15.3.1"
