--- a/lib/package.json
+++ b/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypress-parallel-extended",
-  "version": "2.0.7",
+  "version": "2.1.0",
   "description": "Reduce up to 40% your Cypress suite execution time parallelizing the test run on the same machine.",
   "main": "cli.js",
   "type": "module",
@@ -34,6 +34,7 @@
     "is-npm": "^6.0.0",
     "lodash.camelcase": "^4.3.0",
     "mocha": "^11.1.0",
+    "uuid": "^9.0.1",
     "yargs": "^17.7.2"
   },
   "peerDependencies": {
